indented/parser.output
Terminals unused in grammar

   NONE
   TRUE
   FALSE
   IMPORT
   INDENT
   DEDENT
   END
   TOK_STUFF
   TOK_REST


Grammar

    0 $accept: start $end

    1 start: expr NEWLINE
    2      | star_expr NEWLINE

    3 star_expr: MULTIPLY expr

    4 expr: xor_expr
    5     | expr OR xor_expr

    6 xor_expr: and_expr
    7         | xor_expr XOR and_expr

    8 and_expr: shift_expr
    9         | and_expr AND shift_expr

   10 shift_expr: arith_expr
   11           | shift_expr LESS_LESS arith_expr
   12           | shift_expr GREATER_GREATER arith_expr

   13 arith_expr: term
   14           | arith_expr PLUS term
   15           | arith_expr MINUS term

   16 term: factor
   17     | term MULTIPLY factor
   18     | term T_AT factor
   19     | term R_SLASH factor
   20     | term PERCENT factor
   21     | term R_SLASH_SLASH factor

   22 factor: PLUS factor
   23       | MINUS factor
   24       | TILDA factor
   25       | power

   26 power: atom
   27      | atom STAR_STAR factor

   28 atom: T_NAME
   29     | T_NUMBER
   30     | T_STRING
   31     | "..."
   32     | "None"
   33     | "True"
   34     | "False"


Terminals, with rules where they appear

$end (0) 0
error (256)
NONE (258)
TRUE (259)
FALSE (260)
IMPORT (261)
NEWLINE (262) 1 2
INDENT (263)
DEDENT (264)
END (265)
TOK_STUFF (266)
TOK_REST (267)
T_NUMBER (268) 29
T_STRING (269) 30
T_NAME (270) 28
PLUS (271) 14 22
MULTIPLY (272) 3 17
MINUS (273) 15 23
OR (274) 5
TILDA (275) 24
LESS_LESS (276) 11
GREATER_GREATER (277) 12
STAR_STAR (278) 27
R_SLASH (279) 19
R_SLASH_SLASH (280) 21
T_AT (281) 18
PERCENT (282) 20
AND (283) 9
XOR (284) 7
"..." (285) 31
"None" (286) 32
"True" (287) 33
"False" (288) 34


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
start (35)
    on left: 1 2, on right: 0
star_expr (36)
    on left: 3, on right: 2
expr (37)
    on left: 4 5, on right: 1 3 5
xor_expr (38)
    on left: 6 7, on right: 4 5 7
and_expr (39)
    on left: 8 9, on right: 6 7 9
shift_expr (40)
    on left: 10 11 12, on right: 8 9 11 12
arith_expr (41)
    on left: 13 14 15, on right: 10 11 12 14 15
term (42)
    on left: 16 17 18 19 20 21, on right: 13 14 15 17 18 19 20 21
factor (43)
    on left: 22 23 24 25, on right: 16 17 18 19 20 21 22 23 24 27
power (44)
    on left: 26 27, on right: 25
atom (45)
    on left: 28 29 30 31 32 33 34, on right: 26 27


state 0

    0 $accept: . start $end

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MULTIPLY  shift, and go to state 5
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    start       go to state 12
    star_expr   go to state 13
    expr        go to state 14
    xor_expr    go to state 15
    and_expr    go to state 16
    shift_expr  go to state 17
    arith_expr  go to state 18
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 1

   29 atom: T_NUMBER .

    $default  reduce using rule 29 (atom)


state 2

   30 atom: T_STRING .

    $default  reduce using rule 30 (atom)


state 3

   28 atom: T_NAME .

    $default  reduce using rule 28 (atom)


state 4

   22 factor: PLUS . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 23
    power   go to state 21
    atom    go to state 22


state 5

    3 star_expr: MULTIPLY . expr

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    expr        go to state 24
    xor_expr    go to state 15
    and_expr    go to state 16
    shift_expr  go to state 17
    arith_expr  go to state 18
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 6

   23 factor: MINUS . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 25
    power   go to state 21
    atom    go to state 22


state 7

   24 factor: TILDA . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 26
    power   go to state 21
    atom    go to state 22


state 8

   31 atom: "..." .

    $default  reduce using rule 31 (atom)


state 9

   32 atom: "None" .

    $default  reduce using rule 32 (atom)


state 10

   33 atom: "True" .

    $default  reduce using rule 33 (atom)


state 11

   34 atom: "False" .

    $default  reduce using rule 34 (atom)


state 12

    0 $accept: start . $end

    $end  shift, and go to state 27


state 13

    2 start: star_expr . NEWLINE

    NEWLINE  shift, and go to state 28


state 14

    1 start: expr . NEWLINE
    5 expr: expr . OR xor_expr

    NEWLINE  shift, and go to state 29
    OR       shift, and go to state 30


state 15

    4 expr: xor_expr .
    7 xor_expr: xor_expr . XOR and_expr

    XOR  shift, and go to state 31

    $default  reduce using rule 4 (expr)


state 16

    6 xor_expr: and_expr .
    9 and_expr: and_expr . AND shift_expr

    AND  shift, and go to state 32

    $default  reduce using rule 6 (xor_expr)


state 17

    8 and_expr: shift_expr .
   11 shift_expr: shift_expr . LESS_LESS arith_expr
   12           | shift_expr . GREATER_GREATER arith_expr

    LESS_LESS        shift, and go to state 33
    GREATER_GREATER  shift, and go to state 34

    $default  reduce using rule 8 (and_expr)


state 18

   10 shift_expr: arith_expr .
   14 arith_expr: arith_expr . PLUS term
   15           | arith_expr . MINUS term

    PLUS   shift, and go to state 35
    MINUS  shift, and go to state 36

    $default  reduce using rule 10 (shift_expr)


state 19

   13 arith_expr: term .
   17 term: term . MULTIPLY factor
   18     | term . T_AT factor
   19     | term . R_SLASH factor
   20     | term . PERCENT factor
   21     | term . R_SLASH_SLASH factor

    MULTIPLY       shift, and go to state 37
    R_SLASH        shift, and go to state 38
    R_SLASH_SLASH  shift, and go to state 39
    T_AT           shift, and go to state 40
    PERCENT        shift, and go to state 41

    $default  reduce using rule 13 (arith_expr)


state 20

   16 term: factor .

    $default  reduce using rule 16 (term)


state 21

   25 factor: power .

    $default  reduce using rule 25 (factor)


state 22

   26 power: atom .
   27      | atom . STAR_STAR factor

    STAR_STAR  shift, and go to state 42

    $default  reduce using rule 26 (power)


state 23

   22 factor: PLUS factor .

    $default  reduce using rule 22 (factor)


state 24

    3 star_expr: MULTIPLY expr .
    5 expr: expr . OR xor_expr

    OR  shift, and go to state 30

    $default  reduce using rule 3 (star_expr)


state 25

   23 factor: MINUS factor .

    $default  reduce using rule 23 (factor)


state 26

   24 factor: TILDA factor .

    $default  reduce using rule 24 (factor)


state 27

    0 $accept: start $end .

    $default  accept


state 28

    2 start: star_expr NEWLINE .

    $default  reduce using rule 2 (start)


state 29

    1 start: expr NEWLINE .

    $default  reduce using rule 1 (start)


state 30

    5 expr: expr OR . xor_expr

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    xor_expr    go to state 43
    and_expr    go to state 16
    shift_expr  go to state 17
    arith_expr  go to state 18
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 31

    7 xor_expr: xor_expr XOR . and_expr

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    and_expr    go to state 44
    shift_expr  go to state 17
    arith_expr  go to state 18
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 32

    9 and_expr: and_expr AND . shift_expr

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    shift_expr  go to state 45
    arith_expr  go to state 18
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 33

   11 shift_expr: shift_expr LESS_LESS . arith_expr

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    arith_expr  go to state 46
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 34

   12 shift_expr: shift_expr GREATER_GREATER . arith_expr

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    arith_expr  go to state 47
    term        go to state 19
    factor      go to state 20
    power       go to state 21
    atom        go to state 22


state 35

   14 arith_expr: arith_expr PLUS . term

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    term    go to state 48
    factor  go to state 20
    power   go to state 21
    atom    go to state 22


state 36

   15 arith_expr: arith_expr MINUS . term

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    term    go to state 49
    factor  go to state 20
    power   go to state 21
    atom    go to state 22


state 37

   17 term: term MULTIPLY . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 50
    power   go to state 21
    atom    go to state 22


state 38

   19 term: term R_SLASH . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 51
    power   go to state 21
    atom    go to state 22


state 39

   21 term: term R_SLASH_SLASH . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 52
    power   go to state 21
    atom    go to state 22


state 40

   18 term: term T_AT . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 53
    power   go to state 21
    atom    go to state 22


state 41

   20 term: term PERCENT . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 54
    power   go to state 21
    atom    go to state 22


state 42

   27 power: atom STAR_STAR . factor

    T_NUMBER  shift, and go to state 1
    T_STRING  shift, and go to state 2
    T_NAME    shift, and go to state 3
    PLUS      shift, and go to state 4
    MINUS     shift, and go to state 6
    TILDA     shift, and go to state 7
    "..."     shift, and go to state 8
    "None"    shift, and go to state 9
    "True"    shift, and go to state 10
    "False"   shift, and go to state 11

    factor  go to state 55
    power   go to state 21
    atom    go to state 22


state 43

    5 expr: expr OR xor_expr .
    7 xor_expr: xor_expr . XOR and_expr

    XOR  shift, and go to state 31

    $default  reduce using rule 5 (expr)


state 44

    7 xor_expr: xor_expr XOR and_expr .
    9 and_expr: and_expr . AND shift_expr

    AND  shift, and go to state 32

    $default  reduce using rule 7 (xor_expr)


state 45

    9 and_expr: and_expr AND shift_expr .
   11 shift_expr: shift_expr . LESS_LESS arith_expr
   12           | shift_expr . GREATER_GREATER arith_expr

    LESS_LESS        shift, and go to state 33
    GREATER_GREATER  shift, and go to state 34

    $default  reduce using rule 9 (and_expr)


state 46

   11 shift_expr: shift_expr LESS_LESS arith_expr .
   14 arith_expr: arith_expr . PLUS term
   15           | arith_expr . MINUS term

    PLUS   shift, and go to state 35
    MINUS  shift, and go to state 36

    $default  reduce using rule 11 (shift_expr)


state 47

   12 shift_expr: shift_expr GREATER_GREATER arith_expr .
   14 arith_expr: arith_expr . PLUS term
   15           | arith_expr . MINUS term

    PLUS   shift, and go to state 35
    MINUS  shift, and go to state 36

    $default  reduce using rule 12 (shift_expr)


state 48

   14 arith_expr: arith_expr PLUS term .
   17 term: term . MULTIPLY factor
   18     | term . T_AT factor
   19     | term . R_SLASH factor
   20     | term . PERCENT factor
   21     | term . R_SLASH_SLASH factor

    MULTIPLY       shift, and go to state 37
    R_SLASH        shift, and go to state 38
    R_SLASH_SLASH  shift, and go to state 39
    T_AT           shift, and go to state 40
    PERCENT        shift, and go to state 41

    $default  reduce using rule 14 (arith_expr)


state 49

   15 arith_expr: arith_expr MINUS term .
   17 term: term . MULTIPLY factor
   18     | term . T_AT factor
   19     | term . R_SLASH factor
   20     | term . PERCENT factor
   21     | term . R_SLASH_SLASH factor

    MULTIPLY       shift, and go to state 37
    R_SLASH        shift, and go to state 38
    R_SLASH_SLASH  shift, and go to state 39
    T_AT           shift, and go to state 40
    PERCENT        shift, and go to state 41

    $default  reduce using rule 15 (arith_expr)


state 50

   17 term: term MULTIPLY factor .

    $default  reduce using rule 17 (term)


state 51

   19 term: term R_SLASH factor .

    $default  reduce using rule 19 (term)


state 52

   21 term: term R_SLASH_SLASH factor .

    $default  reduce using rule 21 (term)


state 53

   18 term: term T_AT factor .

    $default  reduce using rule 18 (term)


state 54

   20 term: term PERCENT factor .

    $default  reduce using rule 20 (term)


state 55

   27 power: atom STAR_STAR factor .

    $default  reduce using rule 27 (power)
